# esp_light_cube

./: .gitignore  CMakeLists.txt  Makefile  README.md  adc_riot_port.c  adc_riot_port.h  addr_led_driver.c  addr_led_driver.h  animation_canvas.c  animation_canvas.h  animation_game_of_life.c  animation_game_of_life.h  animation_lines.c  animation_lines.h  animation_manager.c  animation_manager.h  animation_oscillator.c  animation_oscillator.h  animation_scroller.c  animation_scroller.h  animation_snakes.c  animation_snakes.h  animation_sparkles.c  animation_sparkles.h  animation_toplines.c  animation_toplines.h  animation_walker.c  animation_walker.h  ble_test.c  ble_test.h  button.c  button.h  colorspace_interface.c  colorspace_interface.h  compile_commands.json  control_signals.c  control_signals.h  dma_rmt_test.c  dma_rmt_test.h  editable_value.c  (+12 more)
esp32_light_cube/: CMakeLists.txt  README.md  makescript.sh  sdkconfig  sdkconfig.old
esp32_light_cube/.cache/clangd/index/: addr_led_driver.c.676934E002AE0F30.idx  addr_led_driver.h.B2470A481A7B34CD.idx  animation_canvas.c.0EA370CF801FD26A.idx  animation_canvas.h.9AE0590EBE75994D.idx  animation_manager.c.E6FFDE8C1FD2599F.idx  animation_manager.h.E557DAB098F36DBA.idx  animation_walker.h.08D716CE21A55CDB.idx  editable_value.c.56EF910586532102.idx  editable_value.h.D4728E2B99B04D18.idx  led_strip_encoder.c.5D45D558A43F24F8.idx  led_strip_encoder.h.B911F2F9A706B00F.idx  led_strip_example_main.c.5A5FE8D8FBA6D047.idx  logger.c.A78DBF26DC7B907F.idx  logger.h.06E1668B361C26F1.idx  main.c.26A2068866EE31F6.idx  sdkconfig.h.8EE2A74F0549427C.idx  visual_util.h.BC358CFDB9012AB0.idx
esp32_light_cube/components/animations/: CMakeLists.txt  animation_canvas.h  animation_game_of_life.c  animation_game_of_life.h  animation_lines.c  animation_oscillator.c  animation_scroller.c  animation_snakes.h  animation_sparkles.h  animation_squares.c  animation_squares.h  animation_walker.c  animation_walker.h
esp32_light_cube/main/: CMakeLists.txt  addr_led_driver.c  addr_led_driver.h  animation_canvas.c  animation_canvas.h  animation_game_of_life.c  animation_lines.c  animation_lines.h  animation_manager.c  animation_manager.h  animation_oscillator.c  animation_oscillator.h  animation_scroller.c  animation_scroller.h  animation_snakes.c  animation_sparkles.c  animation_walker.c  animation_walker.h  ble_manager.c  ble_manager.h  colorspace_interface.h  control_signals.c  control_signals.h  editable_value.c  led_strip_encoder.h  logger.c  main.c  usr_commands.c  usr_commands.h
main/: CMakeLists.txt  addr_led_driver.c  addr_led_driver.h  animation_manager.c  animation_manager.h  colorspace_interface.c  colorspace_interface.h  editable_value.c  led_strip_encoder.c  light_cube_esp32.c  logger.h  onboard_led.c  onboard_led.h  shell.c  shell.h  util.c  util.h  visual_util.c  visual_util.h
submodules/colorspace-conversions/: Makefile
tools/: crash_log.txt  shell_bug_investigation.py  shell_bug_pr_demo.py  shell_issue_notes
tools/beat_detection/: beat_detector.py
tools/light_cube_assistant/: light_cube_assistant.html  light_cube_assistant.js  serial_man.js
